shakki pöytä valmis

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@ and open the template in the editor.
             <nav class="navbar navbar-default">
                 <ul class="nav navbar-nav">
                     <li><a ng-href="#/">Index</a></li>
-                    <li><a ng-href="#/game">Game</a></li>
+                    <li><a ng-href="#/shakki">Shakki</a></li>
                 </ul>
             </nav>
         </header>
@@ -30,6 +30,7 @@ and open the template in the editor.
         <script src="bower_components/angular-route/angular-route.min.js"></script>
         
         <script src="app/app.js"></script>
-        <script src="app/components/game/game_controller.js"></script>
+        <script src="app/components/shakki/shakki_controller.js"></script>
+        <script src="app/components/shakki/square_directive.js"></script>
     </body>
 </html>
