--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@ and open the template in the editor.
         <script src="bower_components/angular-route/angular-route.min.js"></script>
         
         <script src="app/app.js"></script>
+        <script src="app/components/shakki/shakki_factory.js"></script>
         <script src="app/components/shakki/shakki_controller.js"></script>
         <script src="app/components/shakki/square_directive.js"></script>
     </body>
