--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@ and open the template in the editor.
         
         <script src="app/app.js"></script>
         <script src="app/components/shakki_ts/shakki_square_service.js"></script>
+        <script src="app/components/shakki_ts/shakki_igniter_service.js"></script>
 		<script src="app/components/shakki_ts/shakki_engine_service.js"></script>
         <script src="app/components/shakki/shakki_factory.js"></script>
         <script src="app/components/shakki/shakki_controller.js"></script>
