--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,7 @@ and open the template in the editor.
         <script src="app/components/shakki/shakki_factory.js"></script>
         <script src="app/components/shakki/shakki_controller.js"></script>
         <script src="app/components/shakki/square_directive.js"></script>
+
+        <script src="app/components/ristinolla/ristinolla_controller.js"></script>
     </body>
 </html>
