--- a/client/index.html
+++ b/client/index.html
@@ -29,13 +29,12 @@ and open the template in the editor.
         <script src="bower_components/angular/angular.min.js"></script>
         <script src="bower_components/angular-route/angular-route.min.js"></script>
         
-        <script src="app/app.js"></script>
-        <script src="app/components/shakki_ts/shakki_square_service.js"></script>
-        <script src="app/components/shakki_ts/shakki_igniter_service.js"></script>
-		<script src="app/components/shakki_ts/shakki_engine_service.js"></script>
-        <script src="app/components/shakki/shakki_factory.js"></script>
-        <script src="app/components/shakki/shakki_controller.js"></script>
-        <script src="app/components/shakki/square_directive.js"></script>
+        <script src="app/app.routes.js"></script>
+        <script src="app/components/shakki_ts/shakki_square.service.js"></script>
+        <script src="app/components/shakki_ts/shakki_igniter.service.js"></script>
+		<script src="app/components/shakki_ts/shakki_engine.service.js"></script>
+        <script src="app/components/shakki/shakki.controller.js"></script>
+        <script src="app/components/shakki/square.directive.js"></script>
 
         <script src="app/components/ristinolla/ristinolla_controller.js"></script>
     </body>
