Refactor names from shakki to chess

--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
         <title>Pelimaailma</title>
@@ -16,7 +11,7 @@ and open the template in the editor.
             <nav class="navbar navbar-default">
                 <ul class="nav navbar-nav">
                     <li><a ng-href="#/">Index</a></li>
-                    <li><a ng-href="#/shakki">Shakki</a></li>
+                    <li><a ng-href="#/chess">Chess</a></li>
                 </ul>
             </nav>
         </header>
@@ -30,11 +25,11 @@ and open the template in the editor.
         <script src="bower_components/angular-route/angular-route.min.js"></script>
         
         <script src="app/app.routes.js"></script>
-        <script src="app/components/shakki_ts/shakki_square.service.js"></script>
-        <script src="app/components/shakki_ts/shakki_igniter.service.js"></script>
-		<script src="app/components/shakki_ts/shakki_engine.service.js"></script>
-        <script src="app/components/shakki/shakki.controller.js"></script>
-        <script src="app/components/shakki/square.directive.js"></script>
+        <script src="app/components/chess_ts/chess_square.service.js"></script>
+        <script src="app/components/chess_ts/chess_igniter.service.js"></script>
+		<script src="app/components/chess_ts/chess_engine.service.js"></script>
+        <script src="app/components/chess/chess.controller.js"></script>
+        <script src="app/components/chess/square.directive.js"></script>
 
         <script src="app/components/ristinolla/ristinolla_controller.js"></script>
     </body>
