Create working Tictactoe with proper functionality
Next in line is to create an AI to do some alpha-beta pruning.

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body ng-app="PeliApp">
         <header>
@@ -25,13 +26,15 @@
         <script src="bower_components/angular/angular.min.js"></script>
 		<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
         
-        <script src="app/app.routes.js"></script>
+		<script src="all.js"></script>
+		
+        <!-- <script src="app/app.routes.js"></script>
         <script src="app/components/chess_ts/chess_square.service.js"></script>
         <script src="app/components/chess_ts/chess_igniter.service.js"></script>
 		<script src="app/components/chess_ts/chess_engine.service.js"></script>
         <script src="app/components/chess/chess.controller.js"></script>
         <script src="app/components/chess/square.directive.js"></script>
 
-        <script src="app/components/tictactoe/tictactoe.controller.js"></script>
+        <script src="app/components/tictactoe/tictactoe.controller.js"></script> -->
     </body>
 </html>
