--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
                     <li><a ng-href="#/">Index</a></li>
                     <li><a ng-href="#/chess">Chess</a></li>
 					<li><a ng-href="#/tictactoe">Tictactoe</a></li>
+					<li><a ng-href="#/mod">Mod</a></li>
                 </ul>
             </nav>
         </header>
@@ -26,6 +27,8 @@
         <script src="bower_components/angular/angular.min.js"></script>
 		<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
         
+		<script src="lib/logmon/logmon.js"></script>
+		
 		<script src="all.js"></script>
 		
         <!-- <script src="app/app.routes.js"></script>
